Fixed scrollbar flash problem.

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@
 	background: transparent;
 	box-shadow: none;
     border: none;
-    min-width: 4px;
+    min-width: 8px;
 	margin-top: 2px;
 	margin-bottom: 2px;
 }
@@ -205,7 +205,7 @@
 	background: transparent;
 	box-shadow: none;
     border: none;
-    min-width: 4px;
+    min-width: 8px;
 	margin-top: 2px;
 	margin-bottom: 2px;
 }
